# appetit-backend

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.local.yml  pyproject.toml
compose/: Dockerfile
src/alembic/: env.py
src/alembic/versions/: 0028b4b4b34e_rename_mod_option_column.py  067f182cf167_extend_order_model.py  1e3c0ced9cec_restaurant_model.py  509904d5b830_food_image_path.py  5ac7d7ea4092_divide_orderfoodfoodsize_into_orderfood_.py  638bfa85e11e_.py  662da2f6686a_restaurant_model.py  80de49c0925d_restaurant_lat_lon.py  990963fe807c_menu_food_id.py  b5e828f23fca_food_description.py  b79758753011_.py  dde16e152775_drop_field_menu_priority_name.py  e54dfdba851f_food.py  f5cc9eafce21_users.py  f75705c86eaa_.py
src/apps/: __init__.py  models.py
src/apps/common/: __init__.py
src/apps/contrib/: exceptions.py
src/apps/food_menu/: enums.py  models.py  routers.py  schemas.py  service.py
src/apps/food_menu/scripts/: convert_data.py  show_database_state.py  show_menu.py  test_load.py  test_load_full.py
src/apps/orders/: __init__.py  models.py  routers.py  schemas.py  service.py
src/apps/restaurant/: __init__.py  models.py  routers.py  schemas.py  service.py
src/apps/restaurant/scripts/: convert_restaurant_data.py  show_restaurants.py  test_load.py
src/apps/users/: auth_config.py  depends.py  enums.py  models.py  routers.py  schemas.py  service.py
src/assets/: appfood_data.json  menu_data.json  rstrnts_data.json
src/config/: __init__.py  app.py  database.py  logger.py
src/scripts/: test_all_loading.py
(+3 files in other folders)
